--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,106 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+:root {
+    --primary: #1a2448;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    background: #fff;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+header {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    right: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 50px;
+    z-index: 20;
+    background: transparent;
+}
+
+header::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 65px;
+    background: var(--primary);
+}
+
+header::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    width: 320px;
+    height: 65px;
+    background: var(--primary);
+}
+
+header .menu {
+    position: absolute;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+    transition: all 0.5s ease-in-out;
+}
+
+header .menu.active {
+    transform: rotate(-45deg);
+}
+
+header .logo {
+    position: relative;
+    text-decoration: none;
+    color: #fff;
+    margin-left: 40px;
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+
+.search {
+    position: relative;
+    width: 220px;
+    z-index: 100;
+}
+
+.search input {
+    border: none;
+    outline: none;
+    width: 100%;
+    padding: 5px 15px;
+    background: transparent;
+    backdrop-filter: blur(5px);
+    color: #fff;
+}
+
+.search input::placeholder {
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.search ion-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1.2em;
+    right: 8px;
 }
