--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,104 @@ header .logo {
     color: #8d20fa;
 }
 
+.swiper {
+    width: 100%;
+    height: 100vh;
+    transition: all 0.5s ease-in-out;
+}
 
+.swiper .model-img {
+    position: absolute;
+    z-index: 10;
+    max-width: 70%;
+    opacity: 0.85;
+    visibility: visible;
+    bottom: 100px;
+    left: 120px;
+    transition: all 0.5s ease-in-out;
+    transform-origin: bottom;
+}
 
+.swiper.active {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.swiper .swiper-slide .swiper-slide-next,
+.swiper .swiper-slide .swiper-slide-prev {
+    opacity: 0;
+}
+
+.swiper .control {
+    position: absolute;
+    right: 2%;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 200px;
+    width: 50px;
+    z-index: 1000;
+}
+
+.swiper .swiper-button-prev {
+    position: absolute;
+    right: 50%;
+    top: 30%;
+    transform: rotateZ(90deg);
+    width: 25px;
+    height: 25px;
+}
+
+.swiper .swiper-button-next {
+    position: absolute;
+    right: 30%;
+    top: 80%;
+    transform: rotateZ(90deg);
+    width: 25px;
+    height: 25px;
+}
+
+.swiper .swiper-button-next::after,
+.swiper .swiper-button-prev::after {
+    font-size: 0.8em;
+    line-height: 0;
+    width: 25px;
+    height: 25px;
+    background: transparent;
+    border-radius: 50%;
+    transition: all 0.5s ease-in-out;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper .swiper-button-next:hover,
+.swiper .swiper-button-prev:hover {
+    border-radius: 50%;
+    background: rgba(26, 36, 72, 0.1);
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.swiper .swiper-pagination {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    z-index: 10;
+}
+
+.swiper .swiper-pagination .swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    background: transparent;
+    opacity: 1;
+    border: 1px solid var(--primary);
+    z-index: 10;
+}
+
+.swiper .swiper-pagination .swiper-pagination-bullet-active {
+    background: var(--primary);
+}
 
