--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,3 +323,33 @@ header .logo {
     background: transparent;
 }
 
+.banner .title-left {
+    font-family: 'Berkshire Swash', cursive;
+    text-transform: uppercase;
+    line-height: 1em;
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    font-size: 8em;
+    letter-spacing: 8px;
+    color: var(--primary);
+    transform: translateY(-50%) rotateZ(90deg);
+    opacity: 0.1;
+    z-index: 1;
+}
+
+.banner .title-right {
+    font-family: 'Berkshire Swash', cursive;
+    text-transform: uppercase;
+    line-height: 1em;
+    position: absolute;
+    top: 70%;
+    right: 6%;
+    font-size: 7em;
+    letter-spacing: 2px;
+    color: var(--primary);
+    opacity: 0.1;
+    z-index: 1;
+}
+
+
