--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,3 +452,85 @@ header .logo {
 .banner .video .play.active .open {
     display: none;
 }
+
+.banner form {
+    position: absolute;
+    top: 42.5%;
+    transform: translateY(-50%) scale(0);
+    width: 400px;
+    height: 500px;
+    background: rgba(26, 36, 72, 0.1);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    transition: all 0.4s ease-in-out;
+    z-index: 1; 
+}
+
+.banner form.active {
+    transform: translateY(-50%) scale(1);
+} 
+
+form h2 {
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+form input {
+    width: 100%;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    background: transparent;
+    padding: 8px 10px;
+    color: #fff;
+    font-size: 0.9em;
+    font-weight: 300;
+    box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.2);
+}
+
+form input::placeholder {
+    color: #fff;
+}
+
+form input[type='submit'] {
+    max-width: 150px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+}
+
+form input[type='submit']:hover {
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+form .signup {
+    position: relative;
+    margin-top: 20px;
+    font-size: 0.7em;
+    letter-spacing: 1px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+form .signup a {
+    font-weight: 600;
+    text-decoration: none;
+    color: var(--primary);
+}
+
+
+
