09. js-sport-05. Sci section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,5 +532,60 @@ form .signup a {
     color: var(--primary);
 }
 
+.sci {
+    position: absolute;
+    left: 150px;
+    bottom: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transform: scale(1);
+    transition: all 0.5s ease-in-out;
+    z-index: 1000;
+    gap: 20px;
+}
 
+.sci.active {
+    transform: scale(0);
+}
 
+.sci li {
+    list-style: none;
+}
+
+.sci li a {
+    display: inline-block;
+    text-decoration: none;
+}
+
+.sci li a ion-icon {
+    font-size: 1.5em;
+    color: var(--primary);
+    transition: all 0.5s ease-in-out;
+}
+
+.sci li a ion-icon:hover {
+    color: #8d20fa;
+    animation: scaleSci 1s linear infinite;
+}
+
+@keyframes scaleSci {
+    0% {
+        transform: scale(1.2);
+    }
+    25% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.5);
+    }
+    80% {
+        transform: scale(0.3);
+    }
+    90%{
+        transform: scale(1.5);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
