10. js-sport-05. Responsive mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,3 +589,115 @@ form .signup a {
         transform: scale(1);
     }
 }
+
+@media (max-width: 600px) {
+    header {
+        padding: 10px;
+        top: 20px;
+        left: 20px;
+        right: 20px;
+    }
+    header::before {
+        width: 155px;
+        height: 45px;
+    }
+    header::after {
+        width: 220px;
+        height: 45px;
+    }
+
+    .search {
+        width: 150px;
+    }
+    .nav {
+        left: 20px;
+        top: 65px;
+        bottom: 20px;
+    }
+    .nav.active {
+        width: 280px;
+    }
+
+    .banner {
+        padding: 0 20px;
+    }
+    .banner::after {
+        top: 20px;
+        left: 20px;
+        right: 20px;
+        bottom: 20px;
+        box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+    }
+
+    .swiper .model-img {
+        position: absolute;
+        z-index: 10;
+        max-width: 120%;
+        padding-top: 100px;
+        left: 0;
+        top: -20px;
+    }
+
+    .banner .title-left {
+        left: -65%;
+        font-size: 8em;
+        letter-spacing: 6px;
+    }
+    .banner .title-right {
+        display: none;
+    }
+    .banner .content {
+        left: 50%;
+        top: 60%;
+        transform: translate(-50%, -50%) scale(1);
+        align-items: center;
+        gap: 20px;
+    }
+    .banner .content h2 {
+        font-size: 1.6em;
+    }
+    .banner .content p {
+        text-align: center;
+        font-size: 0.8em;
+    }
+    .banner .video {
+        bottom: 20px;
+        left: 20px;
+        width: calc(100% - 40px);
+    }
+    .banner .video video {
+        width: 100%;
+        object-fit: cover;
+    }
+    .banner .video .services {
+        display: none;
+    }
+    .banner .video .play {
+        padding: 10px;
+    }
+    .banner form {
+        width: 300px;
+        height: 400px;
+        padding: 20px;
+    }
+
+    .sci {
+        position: absolute;
+        left: 35px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+}
+
+
+
+
+
+
+
+
